<resources>
    <string name="app_name">Maintenance Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">register</string>
    <string name="auth_error">Unable to Create Account</string>
    <string name="cancel">cancel</string>
    <string name="register_cancelled">Registering Cancelled</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="sign_in_cancelled">Sign in Cancelled</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_sign_in_response">Unknown Response</string>
    <string name="cont">Continue</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_signed_in_user">SignedInUserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="group">Group</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="group_tasks">Group Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="account_settings">Account Settings</string>
    <string name="settings">Settings</string>
    <string name="title_my_tasks">My Tasks</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_n_group">Create New Group</string>
    <string name="join_e_group">Join Existing Group</string>
    <string name="creation_cancelled">Creation cancelled</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_creator_id">Task Creator ID</string>
    <string name="user_name">User Name</string>
    <string name="group_key">Group Key</string>
    <string name="join_group">Join group</string>
    <string name="fill_in_the_details_below_to_create_a_new_task">Fill in the details below to create a new task</string>
    <string name="create_a_new_task">Create a new Task</string>
    <string name="required_tools_or_items">Required tools or Items</string>
    <string name="requires_contractor_assistance">Requires Contractor Assistance ?</string>
    <string name="assign_to">Assign to</string>
    <string name="assigned_to">Assigned to</string>
    <string name="assigned_to_">Assigned to:\u0020</string>
    <string name="you_are_not_part_of_a_group_n_please_join_a_group">You are not part of a group,   Please join a group</string>
    <string name="no_tasks_are_assigned_to_you">No tasks are assigned to you</string>
    <string name="no_tasks_have_been_completed_by_your_group">No tasks have been completed by your group</string>
    <string name="please_create_or_join_group_using_the_buttons_below">Please create or join Group using the button below</string>
    <string name="loading">Loading...</string>
    <string name="members">Members:\u0020</string>
    <string name="search_for_your_location">Search and add your location</string>
    <string name="select_contractor_type">Select Contractor Type</string>
    <string name="task_due_date">Task Due Date</string>
    <string name="due_today">Due Today</string>
    <string name="days_remaining">\u0020days remaining</string>
    <string name="due_tomorrow">Due tomorrow</string>
    <string name="days_overdue">\u0020days overdue</string>
    <string name="create_task">Create Task</string>
    <string name="select_date">Select date</string>
    <string name="tradesperson">Tradesperson</string>
    <string name="general_user">General User</string>
    <string name="choose_a_user_type">Choose a user Type</string>
    <string name="group_name">Group Name</string>
    <string name="setup_a_workgroup_and_add_your_coworkers">Setup a WorkGroup and add your Coworkers</string>
    <string name="group_pin">Group Pin</string>
    <string-array name="contractor_array">
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Painter</item>
    </string-array>
    <string-array name="options_array">
        <item>Mark as Done</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>

    <string name="google_maps_key">AIzaSyDs5KduAatqZ1j4ORyI7GP0LUui9Yql45E</string>
    <string name="task_near_you">Tasks Near You</string>
    <string name="no_group_tasks">It seems your group has no active tasks, use the button below to create one</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="mobile_no_promt">Enter mobile number below</string>
    <string name="done_dialog_test">Done</string>
    <string name="cancel_dialog_text">Cancel</string>
    <string name="valid_mobile_prompt">Please enter a valid Mobile Number (10 Digits)</string>
    <string name="available_tasks">Available Tasks:</string>
    <string name="gps_settings">GPS is settings</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="join_group_mm">Join my group on Maintenance Manager.\n</string>
    <string name="group_code_qulaifier">Group Code:\u0020</string>
    <string name="choose_trade">Choose your trade</string>
    <string name="login">Login</string>
    <string name="future_date">Please choose a date in the future</string>
    <string name="exclamation">!</string>
    <string name="sign_out_nav_bar">Sign out</string>
    <string name="create_group">Create group</string>
    <string name="new_group">New Group</string>
    <string name="joining_cancelled">Joining Cancelled</string>
    <string name="select_place_promt">Please select a Place</string>
    <string name="locations_acess_toast">You must provide location access to use this app</string>
    <string name="invalid_group_code">Invalid group code</string>
</resources>
