<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tasks"
            android:icon="@drawable/ic_my_tasks"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_group_tasks"
            android:icon="@drawable/ic_group_tasks"
            android:title="@string/group_tasks" />
        <item
            android:id="@+id/nav_completed_tasks"
            android:icon="@drawable/ic_completed"
            android:title="@string/completed_tasks" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group"
            android:title="@string/group" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <!--<item-->
                <!--android:id="@+id/nav_account_settings"-->
                <!--android:icon="@drawable/ic_settings"-->
                <!--android:title="@string/account_settings" />-->
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/sign_out_nav_bar" />
        </menu>
    </item>

</menu>
