<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/login_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="com.mad.maintenancemanager.LoginHandlerActivity">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo4"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progress_bar_post_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>


    <LinearLayout
        android:id="@+id/post_login_choice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_a_user_type"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            style="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/normal_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/general_user"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/tradie_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tradesperson"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>


