<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/task_card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_margin="8dp"
                                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                                        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/external_task_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:text="@string/task_name"
                        android:textColor="@color/tw__solid_white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/external_task_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"

                        android:text="@string/task_description"
                        android:textColor="@color/tw__solid_white"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/external_task_creator_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:gravity="end"
                        android:text="@string/task_creator_id"
                        android:textColor="@color/tw__solid_white"/>


                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/external_call"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_action_call"
                        card_view:fab_colorNormal="@color/colorAccent"
                        />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>