<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/task_card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_margin="8dp"
                                        android:clickable="true"
                                        android:foreground="?attr/selectableItemBackground"
                                        android:stateListAnimator="@animator/lift_on_touch"
                                        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:text="@string/task_name"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/task_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:text="@string/task_description"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_creator_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:text="@string/task_creator_id"/>


                    <ImageView
                        android:id="@+id/task_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:src="@android:drawable/ic_menu_info_details"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/task_assignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/assigned_to"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/task_needed_items_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/task_items_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Required Items:"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/task_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Task Items"
                    android:textSize="15sp"
                    />
            </LinearLayout>



        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>